Resolved tabbing order and contrast issues with Twitter Embedded Timeline.

--- a/src/js/sass/includes/_webwidget.scss
+++ b/src/js/sass/includes/_webwidget.scss
@@ -17,6 +17,9 @@
 	margin: 0 !important;
 	padding: 5px !important;
 }
+%webwidget-color-707070 {
+	color: #707070;
+}
 
 .no-js {
 	.wet-boew-webwidget {
@@ -40,7 +43,17 @@
 		color: #e0e2e4 !important;
 		image: url(../images/webfeeds/gradient.png) !important;
 	}
-	color: #555;
+	@extend %webwidget-color-707070;
+	.twitter-timeline {
+		a {
+			&:link, &:visited {
+				@extend %webwidget-color-707070;
+			}
+		}
+		.stats span, .byline, .retweet-credit, .no-more-pane, .no-tweets-pane p, .p-geo, .cards-base .byline-user, tweet-box-button {
+			@extend %webwidget-color-707070;
+		}
+	}
 	li {
 		display: none;
 		margin: 0 !important;
@@ -95,6 +108,9 @@
 	ul {
 		list-style-type: none !important;
 		@extend %webwidget-twitter-timeline-ul;
+		&.tweet-actions {
+			visibility: visible !important;
+		}
 	}
 	p {
 		&.widget-lang {
